# cookiecutter-python

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .coveragerc  .drone.yml  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.project_name}}.py
{{cookiecutter.project_name}}/{{cookiecutter.project_name.lower().replace('-', '_')}}/: __init__.py  __main__.py  __version__.py  constants.py
