[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
# Formatting
black = "^19.10b0"
isort = { version = "^5.0.0" , extras = ['toml']}
seed-isort-config = "^2.1.0"

# Testing
pytest = "^6.2"
pytest-cov = "^2.10.1"
pytest-dotenv = "^0.5.2"

# Static analysis
mypy = "^0.790"
bandit = "^1.7.0"
vulture = "2.3"
interrogate = "^1.3.2"

[tool.black]
line-length = 88
target-version = ["py38"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.mypy_cache
    | \.venv
  )/
)
'''

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
combine_as_imports = true
known_third_party = ["toml"]

[tool.vulture]
min_confidence = 8
sort_by_size = true
exclude = ["constants.py", "__init__.py"]
paths = ["demo", ]

[tool.interrogate]
ignore-init-module = true
fail-under = 95

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
